<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记账本</string>
    <string name="action_save">保存</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="male">升升</string>
    <string name="female">梅梅</string>
    <string name="person_all">小俩口</string>
    <string name="hint_amount">请输入金额</string>
    <string name="category">类别</string>
    <string name="sub_category">子类别</string>
    <string name="date">日期</string>
    <string name="set_date">设置日期</string>
    <string name="time">时间</string>
    <string name="set_time">设置时间</string>
    <string name="choose_category">选择类别:</string>
    <string name="choose_sub_category">选择子类别:</string>
    <string name="date_and_time_template">yyyy-MM-dd HH:mm</string>
    <string name="time_template">HH:mm</string>
    <string name="title_activity_edit_record">修改记录</string>
    <string name="save_record_failed">保存失败</string>
    <string name="title_activity_category_manage">管理类别</string>
    <string name="add_cate">添加类别</string>
    <string name="add_sub_cate">添加子类别</string>
    <string name="input_name">输入名称</string>
    <string name="action_manage_cate">管理类别</string>
    <string name="action_statistics">数据统计</string>
    <string name="menu_delete">删除</string>
    <string name="menu_edit">修改</string>
    <string name="warning_delete">严肃点</string>
    <string name="confirm_delete_record">删了就恢复不了的哈，稳重点哈，亲。</string>
    <string name="confirm_delete">大力删</string>
    <string name="cancel_delete">算咯</string>
    <string name="something_wrong">哦豁，出问题了耶。</string>
    <string name="operation_success">你赢了</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="before_yesterday">前天</string>
    <string name="title_activity_statistics">数据统计</string>
    <string name="by_week">按周</string>
    <string name="by_month">按月</string>
    <string name="by_year">按年</string>
    <string name="statistics_all">所有</string>
    <string name="statistics_others_portion">*其他*</string>
    <string name="statistics_by_category">按类别统计(不计固定收支)\n低于10%记为*其他*</string>
    <string name="statistics_in_total">总计:%1$s</string>
    <string name="view_records">查看相应记录</string>
    <string name="title_activity_view_record">查看记录</string>
    <string name="next_section">向下</string>
    <string name="previous_section">向上</string>
    <string name="title_activity_sub_category_statistics">按子类别统计</string>

</resources>
